# hermes-echo

./: .gitignore  README.md  README_EN.md  README_JA.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: banned-tokens.yml
hermes_cli/: __init__.py  main.py
hermes_cli/agents/echo/: __init__.py  agent.py  feedback.py  latin_state.py  memory.py  seam_manifest.py  state.py  system_prompt.py
hermes_cli/agents/echo/latin_data/: DATA_LICENSES.md  ledger_schema.md  macron_lexicon.json  paedagogus.md  paradigm_tables.json  proper_nouns.json
hermes_cli/agents/echo/learning/: __init__.py  auto_memory.py  detector.py  idea_capture.py  reflector.py  session_summary.py
hermes_cli/agents/echo/research/: __init__.py  contract_loader.py  graph.py  models.py  provenance.py  state.py
hermes_cli/agents/echo/tools/: __init__.py  file_tools.py  graph_tools.py  latin_tools.py  memory_tools.py  registry.py  seam_safe_fetch.py  search_tools.py  shell_tools.py  web_tools.py
hermes_cli/commands/: __init__.py  echo_cmd.py
hermes_cli/models/: config.py
tests/agents/echo/learning/: __init__.py  test_auto_memory.py  test_detector.py  test_idea_capture.py  test_integration.py  test_reflector.py  test_search_history.py  test_session_summary.py
tests/agents/echo/research/: test_code_execution.py  test_consensus.py  test_ranking.py
tests/integration/: test_services_integration.py  test_workflow.py
tests/integration/agents/echo/: test_agent.py
tests/unit/: test_agent_nodes.py  test_ollama_client.py  test_searxng_client.py  test_task_repository.py
tests/unit/agents/echo/: __init__.py  test_feedback.py  test_file_tools.py  test_memory.py  (+17 more)
tests/unit/models/: test_config.py
(+10 files in other folders)
